--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim-files/vim/bundle/vim-javascript-syntax"]
     path = vim-files/vim/bundle/vim-javascript-syntax
     url  = https://github.com/wavded/vim-stylus.git
+[submodule "vim-files/vim/bundle/vim-less"]
+	path = vim-files/vim/bundle/vim-less
+	url = https://github.com/groenewege/vim-less.git
